--- a/ecommerce-product-website/package.json
+++ b/ecommerce-product-website/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.6.0",
     "parcel": "^2.6.0"
   }
 }
