--- a/ecommerce-product-website/package.json
+++ b/ecommerce-product-website/package.json
@@ -12,6 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
-    "parcel": "^2.6.0"
+    "parcel": "^2.6.0",
+    "parcel-reporter-static-files-copy": "^1.3.4"
+  },
+  "staticFiles": {
+    "staticPath": "src/assets"
   }
 }
